Fix UUID Comparison bug, delete unused import statements and change get(0)  to getFisrt()